--- a/Aula04_574/index.html
+++ b/Aula04_574/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 
     <style>
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        
         .section-one {
             background: deeppink;
             width: 200px;
