--- a/Aula08_42/index.html
+++ b/Aula08_42/index.html
@@ -27,6 +27,10 @@
             <label for="input-teste-3">Label Teste 3</label>
             <input type="text" id="input-teste-3">
 
+            <label for="input-teste-4">Label Teste 4</label>
+            <input type="text" id="input-teste-4">
+
+            <button>Enviar</button>
 
         </form>
 
