--- a/Aula09_44/index.html
+++ b/Aula09_44/index.html
@@ -1,56 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Calcule seu IMC</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
 
-    <section class="container">
-        
-        <h1 class="tabelaIMC">Tabela IMC</h1>
-        
-        <div class="IMC" id="Pesos">
-            <h2><b>IMC</b></h2>
-            <p>Menos do que 18,5</p>
-            <p>Entre 18,5 e 24,9</p>
-            <p>Entre 25 e 29,9</p>
-            <p>Entre 30 e 34,9</p>
-            <p>Entre 35 e 39,9</p>
-            <p>Mais do que 40</p>
-        </div>
+  <section class="container">
+    <h1>Calcule seu IMC</h1>
+    <form action="/" id="formulario" method="POST">
+      <label for="peso">Peso</label>
+      <input type="text" id="peso" name="peso">
+      <label for="altura">Altura</label>
+      <input type="text" id="altura" name="altura">
+      <button type="submit">Enviar</button>
+    </form>
 
-        <div class="Resultado" id="Pesos">
-            <h2><b>Resultado</b></h2>
-            <p>Abaixo do peso</p>
-            <p>Peso Normal</p>
-            <p>Sobrepeso</p>
-            <p>Obesidade Grau 1</p>
-            <p>Obesidade Grau 2</p>
-            <p>Obesidade Grau 3</p>
-        </div>
+    <div id="resultado"></div>
+  </section>
 
-
-        <h1>Calcule seu IMC</h1>
-
-        <form action="" class="formCalculoIMC" id="formulario">
-            <label for="peso">Peso:</label>
-            <input type="text" id="peso">
-
-            <label for="altura">Altura:</label>
-            <input type="text" id="altura">
-
-            <button type="submit">Calcular</button>
-
-        </form>
-
-        <div id="resultado"></div>
-
-    </section>
-
-    <script src="./main.js"></script>
-
+  <script src="./main.js"></script>
 </body>
+
 </html>
